--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button class="envelope" id="envelopeBtn" type="button" aria-label="Abrir carta de convite">
             <img src="images/carta1.png" alt="Carta de convite" class="envelope-image">
         </button>
+        
         <div class="envelope-hint">Clica no envelope</div>
     </div>
 
@@ -43,7 +44,7 @@
 
     <script>
 
-        const btnYes = document.getElementById('btnYes');
+        const btnYes = document.getElementById('btnYes'); //mundança
 
         const letterTitle = document.querySelector('.letter-focus-title');
         const letterBody = document.querySelector('.letter-focus-body');
